src/Pages/CSS/hints.css
@font-face {
    font-family: 'HK Grotesk SemiBold';
    src: local('HK Grotesk'), url(../../Fonts/HKGrotesk-SemiBold.woff) format('woff');
}

@font-face {
    font-family: 'HK Grotesk Bold';
    src: local('HK Grotesk'), url(../../Fonts/HKGrotesk-Bold.woff) format('woff');
}

@font-face {
    font-family: 'HK Grotesk';
    src: local('HK Grotesk'), url(../../Fonts/HKGrotesk-Regular.woff) format('woff');
}

@font-face {
    font-family: 'HK Grotesk Bold';
    src: local('HK Grotesk'), url(../../Fonts/HKGrotesk-Black.woff) format('woff');
}

html {
    margin: 0;
}

.hint-page {
    background-color: #fafdff;
    margin-left: auto;
    margin-right: auto;
    max-width: 90vw;
    max-width: 80vw;
    padding: 4.5%;
    margin-top: 8%;
    /* border-radius: 30px; */
    filter: drop-shadow(0 2mm 2mm #3b3b3b3f);
}

/* HEADINGS */

#hints-heading {
    color: #EF7A30;
    max-width: 60%;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 1.5%;
}

#hints-subtitle {
    color: #242838;
    font-family: 'HK Grotesk SemiBold', sans-serif;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    margin-top: 0;
    margin-bottom: 4%;
    max-width: 70%;
    font-size: 18px;
}

.hint-page h2 {
    font-family: 'HK Grotesk Bold', sans-serif;
    font-size: 22px;
    color: #EF7A30;
    margin-top: 3%;
    margin-bottom: 1%;
}

.hint-page h3 {
    font-family: 'HK Grotesk SemiBold', sans-serif;
    font-size: 18px;
    color: #3B3B3B;
    margin-bottom: 0.5%;
    margin-top: 1.5%;
}

#goals-title {
    margin-left: 3%;
}

.testing-subheading {
    color: #3B3B3B;
    font-family: 'HK Grotesk Bold', sans-serif;
    font-size: 20px;
    margin-top: 3%;
    margin-bottom: 1%;
}

/* TEXT */

#diamond {
    font-family: 'HK Grotesk SemiBold', sans-serif;
    text-decoration: none;
    color: #EF7A30;
}

#diamond:hover {
    color: #554f68;
}

#goals-para {
    color: #f2f2f2;
    margin-left: 3%;
}

.hint-page p {
    font-family: 'HK Grotesk', sans-serif;
    font-size: 18px;
    color: #3B3B3B;
    margin-top: 0;
}

.hint-page #goals-list li {
    color: #f2f2f2;
}

.nav-text-items {
    font-family: 'HK Grotesk SemiBold', sans-serif;
    font-size: 18px;
    color: #3B3B3B;
    text-decoration: none;
    padding: 10px;
}

.hint-page li {
    font-family: 'HK Grotesk', sans-serif;
    font-size: 18px;
    color: #3B3B3B;
    margin-top: 0;
}

.results {
    max-width: 40vw;
    margin: 1%;
    padding: 2%;
    background-color: #242838;
    /* border-radius: 20px; */
    
}

.results p {
    color: #EF7A30;
    font-family: 'HK Grotesk SemiBold', sans-serif;
}

.results li {
    color: #f2f2f2;
}

.hint-page .feature-quote {
    display: flex;
    justify-content: space-around;
    align-items: center;
    border-radius:50%;
    width: 20vw;
    height: 20vw;
    flex-grow: 0;
	flex-shrink: 0;
    margin: 2%;
}

#fq-1 {
    border: 2px solid #242838;
    background-image: url(../../Assets/engoo-images/triangles.png);
    background-size: 350px 350px;
}

#fq-1-text {
    color: #EF7A30;
    font-family: 'HK Grotesk SemiBold', sans-serif;
    font-size: 1.5vw;
}

#fq-2 {
    border: 2px solid #242838;
    background-color: #242838;
    color: #f2f2f2;
}

#fq-2-text {
    color: #f2f2f2;
    font-family: 'HK Grotesk SemiBold', sans-serif;
    font-size: 1.5vw;
    
}


#fq-3 {
    border: 2px solid #EF7A30;
    background-color: #EF7A30;
    
}

#fq-3-text {
    color: #242838;
    font-family: 'HK Grotesk SemiBold', sans-serif;
    font-size: 1.5vw;
}

#fq-4 {
    border: 2px solid #EF7A30;
    color: #242838;
    background-image: url(../../Assets/engoo-images/triangles.png);
    background-size: 350px 350px;
}

#fq-4-text {
    color: #242838;
    font-family: 'HK Grotesk SemiBold', sans-serif;
    font-size: 1.4vw;
}

.hints-user-quotes {
    padding: 3%;
    text-align: center;
    max-width: 12vw;
    font-family: 'HK Grotesk SemiBold', sans-serif;
    font-size: 20px;

}

.results-text {
    max-width: 100%;
    /* margin-left: 3%;
    margin-right: 3%; */
}

/* OTHER STYLING */
/* nav {
    margin-bottom: 3vh;
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: 98vw;
    margin-left: auto;
    margin-right: auto;
    margin-top: 3vh;
} */



#goals {
    background-color: #242838;
    max-width: 85vw;
    margin: 3%;
    padding: 1.5%;
    border-radius: 10px;
    margin-left: auto;
    margin-right: auto;
}

#goals-text {
    width: 90%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 1%;
    margin-bottom: 1%;
}

#goals-list {
    margin-left: 3%;
    margin-bottom:3%;
    color: #f2f2f2;
}

a:hover {
    color: #EF7A30;
    transform: scale(1.1);
    transition: all .1s ease-in-out;
}

.user-flows {
    display: flex;
    justify-content: space-around;
    align-items: flex-start;
    flex-wrap: wrap;
    max-width: 90%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 3%;
    margin-bottom: 1.5%;
}

.back-top {
    float: right;
    padding: 3%;
    font-family: 'HK Grotesk', sans-serif;
    font-size: 22px;
    color: #39536C;
}

.personas {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
    margin-left: auto;
    margin-right: auto;
    justify-items: center;
    align-content: center;
    justify-content: center;
    align-items: center;
}

.two-col-grid {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

.sketches-div {
    flex-basis: 400px;
    flex-grow: 1;
}

.drawing-ft-div {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 3%;
    margin-bottom: 3%;
}

.results-container {
    display: flex;
    padding: 0.5%;
    /* justify-content: space-evenly; */
}

.results-category {
    display: flex;
    margin-bottom: 3%;
    align-items: center;
    justify-content: space-around;
}

/* IMAGES & VIDEO */
.hero-imgs {
    display: flex;
    justify-content: space-evenly;
    margin-bottom: 3%;
}

.hero-img {
    /* max-width: 45vw; */
    width:60%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    filter: drop-shadow(0 6mm 4mm #e2e2e2);
    padding-left: 1%;
    padding-right: 1%;
}

#icon-self {
    width: 4vw;
}

.video-section {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-width: 80vw;
    margin-bottom: 2%;
}

.uf {
    flex-basis: 400px;
    flex-grow: 1;
}

.uf-img {
    max-width: 100%;
}

.persona {
    width: 170px;
}

.persona-big {
    height: 90vh;
    margin-left: 50px;
    margin-right: 50px;
}

.engoo-sketch {
    max-width: 100%;
    margin-bottom: 10px;
}

.engoo-dvpt {
     max-width: 100%;
     display: block;
     margin-left: auto;
     margin-right: auto;
}

.drawing-ft {
    height: 60vh;
    margin: 3%;
}

#drawing-ft-hintbox {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 3%;
    max-width: 60vw;
    border: 2px solid #f2f2f2;
    /* border-radius: 20px; */
}

.drawing-ft-review {
    max-width: 70vw;
    display: block;
    margin-left: auto;
    margin-right: auto;
    /* padding: 0.7%; */
    border: 2px solid #f2f2f2;
    /* border-radius: 10px; */
    filter: drop-shadow(0 2mm 2mm #d2d2d2);
    margin-bottom: 2%;
}

#homepage-hero {
    width: 65%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 3%;
    border: 2px solid #f2f2f2;
    /* border-radius: 20px; */
    filter: drop-shadow(0 2mm 2mm #d2d2d2);
}

#results-poster {
    padding-top: 0.5%;
    padding-bottom: 1.5%;
    padding-left: 1%;
    padding-right: 1%;
    margin-bottom: 5vh;
    background-color: white;
}

.testing-images {
    display: flex;
    justify-content: space-around;
    align-content: space-between;
    flex-wrap: wrap;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2%;
    margin-bottom: 2%;
    padding-top: 1%;
    padding-bottom: 1%;
    filter: drop-shadow(0 1mm 1mm #cecece3d);
    background-color: #eef1f2;
    border-radius: 10px;
}

.testing-pic {  
    max-width: 37vw;
    /* border-radius: 5px; */
    margin-bottom: 1%;
    margin-top: 1%;
}

@media only screen and (max-width: 500px) {
    .results-category {
        flex-direction: column;
        border-radius: 100%;
    }

    #goals-text {
        margin-top: 5%;
        margin-bottom: 5%;
    }

    .hint-page .feature-quote {
        /* border-radius: 10px; */
        width: 80%;
    }

    .hints-user-quotes {
        max-width: 70%;
    }

    #fq-1 {
        border: 1px solid #242838;
        order: 1;
    }

    #fq-1-text {
        font-size: 11px;
    }

    #fq-2 {
        border: 1px solid #242838;
        order: 1;
    }

    #fq-2-text {
        font-size: 11px;
    }


    #fq-3 {
        border: 1px solid #EF7A30;
        order: 1;
    }

    #fq-3-text {
        font-size: 11px;
    }


    #fq-4 {
        border: 1px solid #EF7A30;
        order: 1;
    }

    #fq-4-text {
        font-size: 12px;
    }

}

